# wp_export2yaml

./: .gitignore  README.md  deserialize.php  main.py  pyproject.toml  requirements.txt  test.serialized  test_phpserialize.py  wp_export.xml  wp_export.yaml  wp_export2yaml.py
tests/: test_wp_export2yaml.py
wp_converter/: __main__.py  wp_export2yaml.py
