[project]
name = "wp_export2yaml"
version = "0.1.0"
description = "An utility to convert WordPress WXR (XML export) files into clean, readable YAML files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.4.0",
    "pyyaml>=6.0.2",
    "markdownify>=0.10.0",
    "pytest>=8.3.5",
    "phpserialize>=1.3",
    "beautifulsoup4>=4.0.0",
]

[project.scripts]
wp2yaml = "wp_converter.__main__:main"
